adaptable/pages/mainComponents/Header/navbar/Navbar.module.scss
.navbar {
    height: 100%;
    align-items: center;
    display: flex;


    &__btnWrapper {
        width: 100%;
        height: 100%;
        padding: 0 1.2rem;

        &__btn {
            width: 100%;
            height: 100%;
            color: #280B3D;
            font-family: 'Albert Sans';
            font-weight: 500;
            font-size: 0.87rem;
            line-height: 0.87rem;
        }

        &__btn--notSelected:hover {
            color: #7B3CEA;
        }
    }

    &__btnWrapper--selected {
        border-top: 8px solid;
        border-color: #7B3CEA;
    }

}

